--- a/Front/css/index.css
+++ b/Front/css/index.css
@@ -20,7 +20,7 @@ a {
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #fff;
-    background-image: url(//ll00.cn/image/bingBackground);
+    /* background-image: url(https://img.zcool.cn/community/01e1935cd3b115a801208f8b4e6d75.jpg@3000w_1l_0o_100sh.jpg); */
     background-position: center center;
     position: fixed;
     top: 0;
